[gd_scene load_steps=12 format=3 uid="uid://blici2djpfp25"]

[ext_resource type="PackedScene" uid="uid://b0fveacr07rl2" path="res://Entities/Cats/cat.tscn" id="1_4rnpj"]
[ext_resource type="Texture2D" uid="uid://dsvtodi8n6lt0" path="res://Entities/Cats/laser.png" id="2_bje7h"]
[ext_resource type="Script" path="res://Entities/Cats/cat_warrior.gd" id="2_xyop7"]
[ext_resource type="Resource" uid="uid://cf8r0n3tfgby5" path="res://Projectiles/Laser/projectile_laser_data.tres" id="3_rhwu8"]
[ext_resource type="PackedScene" uid="uid://ck7pp5vhb1ofp" path="res://Debug/debug_panel.tscn" id="4_gbs6n"]
[ext_resource type="AnimationLibrary" uid="uid://d0mckh8rgm0s4" path="res://Entities/Cats/cat_warrior_animations.res" id="5_1hco6"]
[ext_resource type="Texture2D" uid="uid://dwfg1yekccgp1" path="res://Entities/Cats/cat_warrior_highlighted_texture.tres" id="5_xj06e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yh64a"]
radius = 38.0

[sub_resource type="Gradient" id="Gradient_nqswf"]
offsets = PackedFloat32Array(0.565347, 0.567424, 0.581188, 0.613861, 0.620792)
colors = PackedColorArray(0.0823529, 0.0823529, 0.0823529, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_27axx"]
gradient = SubResource("Gradient_nqswf")
width = 250
height = 250
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_m71o5"]
radius = 439.001

[node name="CatWarrior" instance=ExtResource("1_4rnpj")]
script = ExtResource("2_xyop7")
projectile = ExtResource("3_rhwu8")
speed = 1000
speed_multiplier = 1.2

[node name="Sprite2D" parent="." index="0"]
scale = Vector2(0.24, 0.24)

[node name="Sprite2D2" type="Sprite2D" parent="." index="1"]
position = Vector2(1.78814e-06, 2.75676)
scale = Vector2(0.048, 0.0455135)
texture = ExtResource("2_bje7h")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": ExtResource("5_1hco6")
}

[node name="ClickListener" type="Area2D" parent="." index="4"]
unique_name_in_owner = true

[node name="ClickListenerShape" type="CollisionShape2D" parent="ClickListener" index="0"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_yh64a")
debug_color = Color(0.633685, 0.527765, 0.0196375, 0.42)

[node name="Highlighted" type="TextureRect" parent="." index="5"]
modulate = Color(0.145098, 0.501961, 1, 0)
offset_left = -42.0
offset_top = -41.0
offset_right = 128.0
offset_bottom = 129.0
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_27axx")
expand_mode = 1

[node name="HighlightedAwarness" type="TextureRect" parent="." index="6"]
modulate = Color(0.176471, 0.592157, 0.94902, 0)
offset_left = -516.0
offset_top = -516.0
offset_right = 522.0
offset_bottom = 522.0
texture = ExtResource("5_xj06e")

[node name="DebugPanel" parent="." index="7" instance=ExtResource("4_gbs6n")]
unique_name_in_owner = true
visible = false
offset_left = -60.0
offset_top = -164.0
offset_right = -20.0
offset_bottom = -124.0
scale = Vector2(1, 1)

[node name="Awarnesse" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 4
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Awarnesse" index="0"]
shape = SubResource("CircleShape2D_m71o5")

[node name="TimerLaser" type="Timer" parent="." index="9"]
unique_name_in_owner = true
wait_time = 0.75
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="10"]
unique_name_in_owner = true

[connection signal="mouse_entered" from="ClickListener" to="." method="_on_click_listener_mouse_entered"]
[connection signal="mouse_exited" from="ClickListener" to="." method="_on_click_listener_mouse_exited"]
[connection signal="area_entered" from="Awarnesse" to="." method="_on_awarnesse_area_entered"]
[connection signal="area_exited" from="Awarnesse" to="." method="_on_awarnesse_area_exited"]
[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_laser_timeout"]
